src/test/deca/context/invalid/created/testPass3/methInconnue.deca
// Description : appel de methode avec une methode non defini
//   
//
// Résultats :
//    Erreur contextuelle
//    Ligne 11:  MethodNotFoundException: There is no method with the specified name.

class A {
    int x;
    void getX(){
        this.setX(x);
    }
}